Archivos de configuracion/Bases de Datos/iptables.rules
# Generated by xtables-save v1.8.2 on Mon Mar 16 10:32:50 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 10.0.0.1/32 -d 10.0.0.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.0.1/32 -d 10.0.0.2/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.2/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.0.3/32 -d 10.0.0.2/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.0.0.2/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 10.0.0.2/32 -d 10.0.0.1/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A OUTPUT -s 10.0.0.2/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A OUTPUT -s 10.0.0.2/32 -d 10.0.0.3/32 -p tcp -m tcp --dport 5432 -j ACCEPT
COMMIT
# Completed on Mon Mar 16 10:32:50 2020
